fixes, tweaks
* FIXED: linked in language label
* IMPROVED: label styles
* FIXED: front end overflows
* UPDATED: version number, change log

--- a/css/wpsite-follow-us-badges.css
+++ b/css/wpsite-follow-us-badges.css
@@ -2,7 +2,7 @@
 
 .widget_wpsite_follow_us_badges {}
 
-.wpsite_follow_us_div {display: block;padding: 10px 0;clear: both;}
+.wpsite_follow_us_div {display: block;padding: 10px 0;clear: both; overflow: hidden;}
 	.widget .twitterbox {display:block;padding:5px;}
 	.widget .facebookbox {display:block;padding:5px;}
 	.widget .linkedinbox {display:block;padding:5px;}
